src/tests/errors/staticanalysis/typing/typeerrors/type4_fail.cmp
program type4_fail
begin
    proc main()
    begin
        while 42.0 do /* error, expression not bool */
        
            printstr( "Should not be here" );
        od
    end
end